kubernetes/worker-ubuntu22-04.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-ubuntu22-04
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  replicas: 8
  selector:
    matchLabels:
      app: worker
      instance: ubuntu22-04
  template:
    metadata:
      labels:
        app: worker
        instance: ubuntu22-04
    spec:
      containers:
      - command: [/bb/tini, -v, --, /bb/bb_runner, /config/runner-ubuntu22-04.jsonnet]
        image: python:3.9.23-bookworm
        name: runner
        lifecycle:
          postStart:
            exec:
              command: ["test", "-S", "/worker/runner"]
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
        - mountPath: /bb
          name: empty
          readOnly: true
      - args:
        - /config/worker-ubuntu22-04.jsonnet
        image: ghcr.io/buildbarn/bb-worker:20250411T124310Z-1c726bd
        name: worker
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
      volumes:
      - name: empty
        emptyDir: {}
      - name: configs
        configMap:
          name: buildbarn-config
          items:
          - key: common.libsonnet
            path: common.libsonnet
          - key: runner-ubuntu22-04.jsonnet
            path: runner-ubuntu22-04.jsonnet
          - key: worker-ubuntu22-04.jsonnet
            path: worker-ubuntu22-04.jsonnet
      - emptyDir: {}
        name: worker
