kubernetes/storage.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: storage
  namespace: buildbarn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storage
  serviceName: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
      - args:
        - /config/storage.jsonnet
        image: ghcr.io/buildbarn/bb-storage:20250408T112116Z-1d733a3
        name: storage
        ports:
        - containerPort: 8981
          protocol: TCP
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /storage-cas
          name: cas
        - mountPath: /storage-ac
          name: ac
      volumes:
      - name: configs
        configMap:
          name: buildbarn-config
          items:
          - key: common.libsonnet
            path: common.libsonnet
          - key: storage.jsonnet
            path: storage.jsonnet
  volumeClaimTemplates:
  - metadata:
      name: cas
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: "gp2"
      resources:
        requests:
          storage: 33Gi
  - metadata:
      name: ac
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: "gp2"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
  name: storage
  namespace: buildbarn
spec:
  clusterIP: None
  ports:
  - port: 8981
    protocol: TCP
    name: grpc
  selector:
    app: storage
