kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: buildbarn
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - args:
        - /config/frontend.jsonnet
        image: ghcr.io/buildbarn/bb-storage:20250408T112116Z-1d733a3
        name: storage
        ports:
        - containerPort: 8980
          protocol: TCP
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
      volumes:
        - name: configs
          configMap:
            name: buildbarn-config
            items:
              - key: common.libsonnet
                path: common.libsonnet
              - key: frontend.jsonnet
                path: frontend.jsonnet
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
  name: frontend
  namespace: buildbarn
spec:
  ports:
  - port: 8980
    protocol: TCP
    name: grpc
  selector:
    app: frontend
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: buildbarn
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scheduler
            port: 
              number: 8980
